Name:                tcpws
Version:             0.1
Synopsis:            WebSocket-to-TCP service
Homepage:            https://github.com/luciferous/tcpws
License:             BSD3
License-file:        LICENSE
Author:              Neuman Vong
Maintainer:          neuman.vong@gmail.com
Category:            Network

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2

Executable tcpws

Main-is: src/Main.hs
  
  -- Packages needed in order to build this package.
  -- Build-depends:       
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
