name:                tcpws
version:             0.1
synopsis:            WebSocket-to-TCP proxying server
description:
  A WebSocket server which initiates TCP connections on behalf of the
  WebSocket, copying data between the WebSocket and TCP connection.
homepage:            https://github.com/luciferous/tcpws
license:             BSD3
license-file:        LICENSE
author:              Neuman Vong <neuman.vong@gmail.com>
maintainer:          Neuman Vong <neuman.vong@gmail.com>
copyright:           (c) 2011 Neuman Vong
category:            Network

build-type:          Simple

cabal-version:       >=1.8
extra-source-files:  README.md

executable tcpws
  hs-source-dirs: src
  main-is: Main.hs
  ghc-options: -threaded -Wall
  
  build-depends:       
    base >= 4.3 && < 5,
    websockets >= 0.4.1,
    bytestring >= 0.9.1,
    network >= 2.3,
    mtl >= 2.0
